--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "4.4.1",
     "google-map-react": "1.1.6",
+    "prettier": "1.19.1",
     "react": "^16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
+    "react-intersection-observer": "8.26.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-social-media-follow": "1.1.1"
